--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "serve": "^13.0.2",
     "sqlite3": "^5.0.6",
     "typeorm": "^0.2.45"
   },
